<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Andrew Ajube</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla facilisi cras fermentum odio. Adipiscing at in tellus integer. Augue interdum velit euismod in pellentesque massa. Mi eget mauris pharetra et ultrices neque ornare aenean euismod. Sed euismod nisi porta lorem mollis aliquam ut porttitor leo. Diam vel quam elementum pulvinar etiam non quam lacus suspendisse. Faucibus nisl tincidunt eget nullam non. Ut lectus arcu bibendum at varius vel pharetra vel turpis. Adipiscing elit pellentesque habitant morbi tristique. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Commodo sed egestas egestas fringilla phasellus faucibus. Posuere morbi leo urna molestie at. Mauris in aliquam sem fringilla ut morbi tincidunt augue. Donec pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Pharetra diam sit amet nisl. At consectetur lorem donec massa sapien faucibus et molestie. Nam libero justo laoreet sit amet cursus sit amet. Aliquet bibendum enim facilisis gravida neque. Nam at lectus urna duis convallis.</string>
    <string name="arrow_down">Arrow down</string>
    <string name="profile_pic">Profile picture</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
</resources>
